--- a/frontend/src/styles/tailwind.css
+++ b/frontend/src/styles/tailwind.css
@@ -7,11 +7,9 @@
     @apply inline-block text-xs font-bold text-center uppercase border rounded;
   }
   .button.blue {
-    @apply text-white bg-blue-500 border-blue-500;
+    @apply text-white bg-blue-500 border-blue-500 hover:bg-blue-300 hover:border-blue-300 disabled:bg-blue-300;
   }
-  .button.blue:hover {
-    @apply bg-blue-300 border-blue-300;
-  }
+
   .button.blue.hollow {
     @apply text-blue-500 bg-transparent border-blue-500;
   }
